Align pom with template configuration